                     Na visualização de BIO e IBC, passa a usar Id= para especificar o equipamento. Desta forma, receberá a ETL que contém mais dados sobre o equipamento.
            _conf..: Muda receitas de 1000 e 2000 para testar PH.
                     Muda CIP BIO para volume de 50L
                     CIP modificado acrescentando 3 ciclos de enxague no fim, assim como no biorreator.

1.2.38  -   Master.: Grow não lia PH caso não tivesse de ajustar o PH, modificado.
20231115             Mudado para o delay na leitura do aferir PH caso não esteja produzindo.
                     Muda lógica de temperatura em get_alldata.
                     Desliga leitura de USOM e LASER nos IBCs. Vários equipamentos estavam sem os sensores e com isto tendo intermitência.
                     Avisa quando não foi possível desligar a resistência.
                     Função get_alldata só liga resistência caso for CIP e bomba e válvulas estiverem ON e não houver erro na biofábrica.
                     Função scp_panic criada para tratar casos de panic. Primeiro utiliza no scp_process_conn.
                     Cria job SET MAXTEMP para definir temperatura máxima.
            Network: Muda os timeouts para evitar erro na aferição de PH.
            _conf..: Receita1000 e 2000 mudadas para desligar aerador no teste de PH da água.
                     Tempo de CIP de Biorreator atualizado para 200 minutos.
                     No CIP de Biorreator, usa SET MAXTEMP 0 para garantir que a resistência não seja ativada de forma incorreta.
    38b     Master.: Testa len da resposta para o magicvalue pois alguns equipamentos retornaram valor invalido.
    38c     Master.: turn_aero liga aerador antes de abrir válvulas e aguarda 2 segundos.
                     Cria mutex para map de status das válvulas.
    38d     Master.: Corrige problema durante o recircular.
            Front..: Corrige exibição do botão recircular 

